# Agentic_tracking_system

./: .gitignore  README.md  config.json  pyproject.toml  run.py
agents/: README.md  __init__.py
agents/memory/: base.py  short_term.py
agents/orchestrator/: README.md  __init__.py  pyproject.toml
agents/orchestrator/src/orchestrator/: agent.py  tools.py
agents/orchestrator/src/orchestrator/memory/: __init__.py  base.py  manager.py  short_term.py
agents/sub_agents/: README.md  __init__.py
agents/sub_agents/behavior_group_modeling/: README.md  pyproject.toml
agents/sub_agents/behavior_group_modeling/src/behavior_group_modeling/monitors/: __init__.py
agents/sub_agents/behavior_group_modeling/tests/: __init__.py
agents/sub_agents/behavior_individual_modeling/: README.md  pyproject.toml
agents/sub_agents/behavior_modeling/: README.md  __init__.py  pyproject.toml
agents/sub_agents/behavior_modeling/src/behavior_modeling/agent/: agent.py  tools.py
agents/sub_agents/behavior_modeling/src/behavior_modeling/core/: executor.py  helper.py
agents/sub_agents/data_pipeline/: README.md  __init__.py  pyproject.toml
agents/sub_agents/data_pipeline/src/agent/: agent.py
agents/sub_agents/data_pipeline/src/data_pipeline/: __about__.py  __init__.py
agents/sub_agents/data_pipeline/src/data_pipeline/agent/: agent.py  tools.py
agents/sub_agents/data_pipeline/src/data_pipeline/pipelines/: __init__ .py  group_analyzer.py  processor.py  source_connector.py
agents/sub_agents/data_pipeline/src/pipelines/: __init__.py  source_connector.py
agents/sub_agents/data_validation/: LICENSE.txt  README.md  __init__.py  pyproject.toml
agents/sub_agents/data_validation/src/agent/: agent.py  tools.py
agents/sub_agents/data_validation/src/data_validation/: __about__.py  __init__.py
agents/sub_agents/data_validation/src/data_validation/agent/: __init__.py  agent.py  tools.py
agents/sub_agents/data_validation/src/data_validation/validators/: device_session.py  identity.py  timestamp.py
agents/sub_agents/data_validation/src/validators/: __init__.py  identity.py
agents/sub_agents/group_identification/: README.md  __init__.py  pyproject.toml
agents/sub_agents/group_identification/src/group_identification/: __init__.py
agents/sub_agents/group_identification/src/group_identification/agent/: agent.py  tools.py
agents/sub_agents/group_identification/src/group_identification/core/: group_identifier.py
agents/sub_agents/group_identification/src/group_identification/identifier/: louvain.py  saver.py
agents/sub_agents/knowledge_insight/: README.md  __init__.py  pyproject.toml  pytest_log.txt
agents/sub_agents/knowledge_insight/src/knowledge_insight/: __about__.py
agents/sub_agents/knowledge_insight/src/knowledge_insight/agent/: agent.py  tools.py
agents/sub_agents/knowledge_insight/src/knowledge_insight/core/: alerts_insighter.py  clean_data_insighter.py  data_insighter.py  groups_insighter.py
agents/sub_agents/knowledge_insight/src/knowledge_insight/core/executor/: __init__.py  defaults.py  exceptions.py  executor.py  namespace.py  validator.py
api/: README.md  Readme.md  __init__.py  constants.py  exceptions.py  main.py
api/models/: __init__.py  agent.py  alert_filters.py  analytics.py  chat.py  group_filters.py  session_filters.py
api/routers/: __init__.py  agent.py  alerts.py  analytics.py  attendance.py  chat.py  groups.py
api/services/: __init__.py  agent_service.py  alert_service.py  analytics_service.py  chat_service.py  group_service.py  scheduler_service.py  session_service.py
console/: LICENSE.txt  README.md  pyproject.toml
console/src/: main.py
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/src/: App.jsx  index.css
dashboard/src/components/Common/: Badge.css  Badge.jsx  Card.css  Card.jsx  Modal.css  Modal.jsx  PageHeader.css  PageHeader.jsx  Table.css  Table.jsx
dashboard/src/components/Layout/: Header.css  Header.jsx  Sidebar.css  Sidebar.jsx
dashboard/src/pages/About/: About.css  index.jsx
dashboard/src/pages/Agent/: Agent.css  index.jsx
dashboard/src/pages/Alerts/: Alerts.css  index.jsx
dashboard/src/pages/Attendance/: Attendance.css  index.jsx
dashboard/src/pages/Groups/: Groups.css  GroupsModal.jsx  index.jsx
dashboard/src/pages/Overview/: Overview.css  index.jsx
dashboard/src/services/: api.js
data/raw/: attendance.jsonl
data_pipeline/: README.md
data_pipeline/src/agent/: __init__.py  agent.py  gemini_model.py  tools.py
data_pipeline/src/data_pipeline/: __init__.py  fetch_data.py  preprocess.py
data_pipeline/src/data_pipeline/agent/: agent.py  tools.py
data_pipeline/src/data_pipeline/pipelines/: group_analyzer.py  source_connector.py
data_pipeline/src/pipelines/: __init__.py  group_analyzer.py  observer.py  processor.py  source_connector.py
data_validation/: README.md
data_validation/src/: __init__.py
data_validation/src/agent/: __init__.py  agent.py
data_validation/src/validators/: device_session.py  identity.py  timestamp.py
scratch/: check_uids.py  generate_logs.py
utils/: README.md  __init__.py  pyproject.toml
utils/src/utils/: Secrets.py  __init__.py  config.py  file_helpers.py  files_helper.py  helpers.py  logger.py  printer.py
utils/src/utils/DTOs/alerts/: DeviceAlertDTO.py  IdentityAlertDTO.py  TimestampAlertDTO.py
utils/src/utils/DTOs/attendance/: LogEntryDTO.py  MatchedSessionDTO.py  SessionDTO.py
utils/src/utils/DTOs/groups/: GroupItemDTO.py  GroupsDTO.py
utils/src/utils/helpers/: __init__.py  files.py  time.py
utils/src/utils/mappers/: __init__.py  alert_mappers.py  group_mappers.py  session_mappers.py
utils/src/utils/models/: gemini.py  ragarenn.py  ragrenn.py
utils/src/utils/storage/: __init__.py  base.py  csv_repo.py  factory.py  ics_repo.py  json_repo.py  jsonl_repo.py
