[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "console"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "MoMakkawi", email = "MoMakkawi@hotmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/MoMakkawi/console#readme"
Issues = "https://github.com/MoMakkawi/console/issues"
Source = "https://github.com/MoMakkawi/console"

[tool.hatch.version]
path = "src/console/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/console tests}"

[tool.coverage.run]
source_pkgs = ["console", "tests"]
branch = true
parallel = true
omit = [
  "src/console/__about__.py",
]

[tool.coverage.paths]
console = ["src/console", "*/console/src/console"]
tests = ["tests", "*/console/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
