[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utils"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "MoMakkawi", email = "MoMakkawi@hotmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/MoMakkawi/utils#readme"
Issues = "https://github.com/MoMakkawi/utils/issues"
Source = "https://github.com/MoMakkawi/utils"

[tool.hatch.version]
path = "src/utils/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/utils tests}"

[tool.coverage.run]
source_pkgs = ["utils", "tests"]
branch = true
parallel = true
omit = [
  "src/utils/__about__.py",
]

[tool.coverage.paths]
utils = ["src/utils", "*/utils/src/utils"]
tests = ["tests", "*/utils/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
