[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestrator"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "MoMakkawi", email = "MoMakkawi@hotmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/MoMakkawi/orchestrator#readme"
Issues = "https://github.com/MoMakkawi/orchestrator/issues"
Source = "https://github.com/MoMakkawi/orchestrator"

[tool.hatch.version]
path = "src/orchestrator/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/orchestrator tests}"

[tool.coverage.run]
source_pkgs = ["orchestrator", "tests"]
branch = true
parallel = true
omit = [
  "src/orchestrator/__about__.py",
]

[tool.coverage.paths]
orchestrator = ["src/orchestrator", "*/orchestrator/src/orchestrator"]
tests = ["tests", "*/orchestrator/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
