[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "behavior-individual-modeling"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "MoMakkawi", email = "MoMakkawi@hotmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/MoMakkawi/behavior-individual-modeling#readme"
Issues = "https://github.com/MoMakkawi/behavior-individual-modeling/issues"
Source = "https://github.com/MoMakkawi/behavior-individual-modeling"

[tool.hatch.version]
path = "src/behavior_individual_modeling/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/behavior_individual_modeling tests}"

[tool.coverage.run]
source_pkgs = ["behavior_individual_modeling", "tests"]
branch = true
parallel = true
omit = [
  "src/behavior_individual_modeling/__about__.py",
]

[tool.coverage.paths]
behavior_individual_modeling = ["src/behavior_individual_modeling", "*/behavior-individual-modeling/src/behavior_individual_modeling"]
tests = ["tests", "*/behavior-individual-modeling/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
