[project]
name = "data_pipeline"
version = "0.0.1"
description = "Data pipeline sub-agent"
authors = [
    { name="MoMakkawi", email="MoMakkawi@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tell Hatch explicitly where the Python package lives
packages = ["src"]