[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "group-identification"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "MoMakkawi", email = "MoMakkawi@hotmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/MoMakkawi/group-identification#readme"
Issues = "https://github.com/MoMakkawi/group-identification/issues"
Source = "https://github.com/MoMakkawi/group-identification"

[tool.hatch.version]
path = "src/group_identification/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/group_identification tests}"

[tool.coverage.run]
source_pkgs = ["group_identification", "tests"]
branch = true
parallel = true
omit = [
  "src/group_identification/__about__.py",
]

[tool.coverage.paths]
group_identification = ["src/group_identification", "*/group-identification/src/group_identification"]
tests = ["tests", "*/group-identification/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
